# fractals-cl

./: CMakeLists.txt  README.md  cl_helper.cpp  fractal_viewer.cpp  fractal_viewer.h  fractals-cl.vcxproj  fractals-cl.vcxproj.filters  fractals.cpp  fractals.h  imgui.ini  main.cpp
fractals/: burning_ship.cl  color.cl  mandelbrot.cl
imgui/: imgui_impl_sdlrenderer2.cpp
src/: cl_helper.h  fractal_viewer.cpp  fractal_viewer.h
src/fractals/: eclipse.cl  julia.cl
